<resources>
    <string name="app_name">DiceGame</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="play">Play</string>
    <string name="roll">Roll</string>
    <string name="description_left_dice">Left dice</string>
    <string name="description_right_dice">Right dice</string>

    <string name="computer_sum">Computer\'s Sum</string>
    <string name="user_instruction">Pick a number</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>