<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <Button
        android:id="@+id/rollButton"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:text="@string/roll"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.804" />

    <TextView
        android:id="@+id/right_dice_text_view"
        android:layout_width="73dp"
        android:layout_height="70dp"
        android:text="TextView"
        tools:layout_editor_absoluteX="242dp"
        tools:layout_editor_absoluteY="226dp" />

    <Spinner
        android:id="@+id/left_dice_spinner_view"
        android:layout_width="82dp"
        android:layout_height="69dp"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="226dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="217dp"
        android:layout_height="34dp"
        android:text="@string/computer_sum"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="327dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="215dp"
        android:layout_height="35dp"
        android:text="@string/user_instruction"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="388dp" />
</androidx.constraintlayout.widget.ConstraintLayout>